{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 92,
  "lineage": "bd32ef73-8899-797f-075f-87739dfda07f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/frontendIPConfigurations/DMZ-PublicIP",
                "name": "DMZ-PublicIP",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/publicIPAddresses/pip-fonteyn-enterprise-dmz-lb"
              }
            ],
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz",
            "location": "northeurope",
            "name": "lb-fonteyn-enterprise-dmz",
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/frontendIPConfigurations/Internal-Frontend",
                "name": "Internal-Frontend",
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-backend"
              }
            ],
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal",
            "location": "northeurope",
            "name": "lb-fonteyn-enterprise-internal",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool",
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz",
            "name": "DMZ-BackendPool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.dmz",
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/backendAddressPools/Internal-BackendPool",
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal",
            "name": "Internal-BackendPool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.internal",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "dmz_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/probes/https-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz",
            "name": "https-probe",
            "number_of_probes": 2,
            "port": 443,
            "probe_threshold": 1,
            "protocol": "Https",
            "request_path": "/health"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.dmz",
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "internal_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/probes/app-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal",
            "name": "app-probe",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.internal",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "dmz_http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/frontendIPConfigurations/DMZ-PublicIP",
            "frontend_ip_configuration_name": "DMZ-PublicIP",
            "frontend_port": 80,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/loadBalancingRules/HTTP-Redirect",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz",
            "name": "HTTP-Redirect",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.dmz",
            "azurerm_lb_backend_address_pool.dmz",
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "dmz_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/frontendIPConfigurations/DMZ-PublicIP",
            "frontend_ip_configuration_name": "DMZ-PublicIP",
            "frontend_port": 443,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/loadBalancingRules/HTTPS",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz",
            "name": "HTTPS",
            "probe_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/probes/https-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.dmz",
            "azurerm_lb_backend_address_pool.dmz",
            "azurerm_lb_probe.dmz_https",
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "internal_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/backendAddressPools/Internal-BackendPool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/frontendIPConfigurations/Internal-Frontend",
            "frontend_ip_configuration_name": "Internal-Frontend",
            "frontend_port": 8080,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/loadBalancingRules/Application",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal",
            "name": "Application",
            "probe_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/probes/app-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.internal",
            "azurerm_lb_backend_address_pool.internal",
            "azurerm_lb_probe.internal_app",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-app-01",
            "internal_domain_name_suffix": "wv4g3wfo423exprhf5ziinxv5f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "nic-app-01",
            "private_ip_address": "10.0.3.5",
            "private_ip_addresses": [
              "10.0.3.5"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-app-02",
            "internal_domain_name_suffix": "wv4g3wfo423exprhf5ziinxv5f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "nic-app-02",
            "private_ip_address": "10.0.3.6",
            "private_ip_addresses": [
              "10.0.3.6"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "azure_arc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-azure-arc-01",
            "internal_domain_name_suffix": "wv4g3wfo423exprhf5ziinxv5f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.6.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-azure-arc"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "nic-azure-arc-01",
            "private_ip_address": "10.0.6.4",
            "private_ip_addresses": [
              "10.0.6.4"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.azure_arc",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-db-01",
            "internal_domain_name_suffix": "wv4g3wfo423exprhf5ziinxv5f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-database"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "nic-db-01",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.database",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-web-01",
            "internal_domain_name_suffix": "wv4g3wfo423exprhf5ziinxv5f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-frontend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "nic-web-01",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-web-02",
            "internal_domain_name_suffix": "wv4g3wfo423exprhf5ziinxv5f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-frontend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "nic-web-02",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "app_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/backendAddressPools/Internal-BackendPool",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-app-01/ipConfigurations/internal|/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/backendAddressPools/Internal-BackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-app-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.internal",
            "azurerm_lb_backend_address_pool.internal",
            "azurerm_network_interface.app",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/backendAddressPools/Internal-BackendPool",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-app-02/ipConfigurations/internal|/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-internal/backendAddressPools/Internal-BackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-app-02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.internal",
            "azurerm_lb_backend_address_pool.internal",
            "azurerm_network_interface.app",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-web-01/ipConfigurations/internal|/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-web-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.dmz",
            "azurerm_lb_backend_address_pool.dmz",
            "azurerm_network_interface.web",
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-web-02/ipConfigurations/internal|/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/loadBalancers/lb-fonteyn-enterprise-dmz/backendAddressPools/DMZ-BackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/networkInterfaces/nic-web-02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.dmz",
            "azurerm_lb_backend_address_pool.dmz",
            "azurerm_network_interface.web",
            "azurerm_public_ip.dmz_lb_public_ip",
            "azurerm_resource_group.compute",
            "azurerm_resource_group.network",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "azure_arc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-azure-arc",
            "location": "northeurope",
            "name": "nsg-azure-arc",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "5985",
                  "5986"
                ],
                "direction": "Inbound",
                "name": "AllowAzureArcManagement",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "AzureCloud",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-backend",
            "location": "northeurope",
            "name": "nsg-backend",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080",
                  "8443"
                ],
                "direction": "Inbound",
                "name": "AllowFromFrontend",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromManagement",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.5.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-database",
            "location": "northeurope",
            "name": "nsg-database",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1433",
                  "3306",
                  "5432"
                ],
                "direction": "Inbound",
                "name": "AllowFromBackend",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromManagement",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.5.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz",
            "location": "northeurope",
            "name": "nsg-dmz",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend",
            "location": "northeurope",
            "name": "nsg-frontend",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowFromDMZ",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromManagement",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.5.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-management",
            "location": "northeurope",
            "name": "nsg-management",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dmz_lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-compute/providers/Microsoft.Network/publicIPAddresses/pip-fonteyn-enterprise-dmz-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.88.237",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "pip-fonteyn-enterprise-dmz-lb",
            "resource_group_name": "rg-fonteyn-enterprise-compute",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/publicIPAddresses/pip-fonteyn-enterprise-vpn-gw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.138.197.24",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "pip-fonteyn-enterprise-vpn-gw",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure_arc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-azure-arc",
            "name": "snet-azure-arc",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-backend",
            "name": "snet-backend",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-database",
            "name": "snet-database",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-dmz",
            "name": "snet-dmz",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.254.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-frontend",
            "name": "snet-frontend",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.0/27"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-management",
            "name": "snet-management",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "virtual_network_name": "vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "azure_arc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-azure-arc",
            "network_security_group_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-azure-arc",
            "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-azure-arc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.azure_arc",
            "azurerm_resource_group.network",
            "azurerm_subnet.azure_arc",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-backend",
            "network_security_group_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-backend",
            "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-backend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.backend",
            "azurerm_resource_group.network",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-database",
            "network_security_group_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-database",
            "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-database"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.database",
            "azurerm_resource_group.network",
            "azurerm_subnet.database",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-dmz",
            "network_security_group_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-dmz",
            "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-dmz"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.dmz",
            "azurerm_resource_group.network",
            "azurerm_subnet.dmz",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-frontend",
            "network_security_group_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend",
            "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/snet-frontend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.frontend",
            "azurerm_resource_group.network",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "azure_enterprise",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d86e7cb5-f7ae-4b3a-be27-2ff28436f5fd",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure",
            "location": "northeurope",
            "name": "vnet-fonteyn-enterprise-azure",
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_dns_servers",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_servers": [
              "192.168.2.100"
            ],
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/dnsServers/default",
            "virtual_network_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.255.30"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "52.138.197.24"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation2",
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworkGateways/vng-fonteyn-enterprise-vpn",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/publicIPAddresses/pip-fonteyn-enterprise-vpn-gw",
                "subnet_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworks/vnet-fonteyn-enterprise-azure/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "northeurope",
            "name": "vng-fonteyn-enterprise-vpn",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "sku": "VpnGw2",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.vpn_gateway",
            "azurerm_resource_group.network",
            "azurerm_subnet.gateway",
            "azurerm_virtual_network.azure_enterprise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "hoofdkantoor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/connections/conn-fonteyn-enterprise-hoofdkantoor",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/localNetworkGateways/lng-fonteyn-enterprise-hoofdkantoor",
            "location": "northeurope",
            "name": "conn-fonteyn-enterprise-hoofdkantoor",
            "private_link_fast_path_enabled": false,
            "resource_group_name": "rg-fonteyn-enterprise-network",
            "routing_weight": 0,
            "shared_key": "FonteynEnterprise2024!",
            "tags": {
              "Architecture": "hybrid-cloud",
              "CostCenter": "IT-Development",
              "Course": "Infrastructure-as-Code",
              "DeployDate": "2025-06-04T11:15:36Z",
              "Environment": "dev",
              "Location": "Multi-Site-Enterprise",
              "ManagedBy": "terraform",
              "Owner": "daan-onstenk",
              "Project": "fonteyn-enterprise",
              "Purpose": "vacation-parks-enterprise",
              "Student": "daan.onstenk@student.fontys.nl",
              "University": "Fontys"
            },
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/68915ced-864a-4180-9784-264b152f53ec/resourceGroups/rg-fonteyn-enterprise-network/providers/Microsoft.Network/virtualNetworkGateways/vng-fonteyn-enterprise-vpn"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "authorization_key"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_local_network_gateway.hoofdkantoor",
            "azurerm_public_ip.vpn_gateway",
            "azurerm_resource_group.network",
            "azurerm_subnet.gateway",
            "azurerm_virtual_network.azure_enterprise",
            "azurerm_virtual_network_gateway.vpn"
          ]
        }
      ]
    }
  ]
}